Bug 141612 - Area -> Pattern preview not working and pattern editor disabled
Summary: Area -> Pattern preview not working and pattern editor disabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-04-10 19:29 UTC by Telesto
Modified: 2024-04-20 03:04 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-04-10 19:29:12 UTC
Description:
Area -> Pattern preview not working and pattern editor disabled

Steps to Reproduce:
1. Open Writer
2. Format -> Page Style -> Area -> Pattern

Actual Results:
Blue preview window and red cross in for Editor

Expected Results:
Should work properly as before


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ea4fb1559f7b99a0bfaf18f26cb3b6972c9cde1c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

still OK in
Version: 7.0.0.0.beta1+ (x64)
Build ID: 2891e91a513520d68ea2b8c59c14335861a15253
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Julien Nabet 2021-04-11 12:04:40 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I noticed this repeated log:
warn:legacy.osl:29516:29516:svx/source/sdr/primitive2d/sdrattributecreator.cxx:662: No fill graphic in SfxItemSet (!)
Comment 2 raal 2021-04-18 10:06:19 UTC
This seems to have begun at the below commit.
Adding Cc: to Luboš Luňák; Could you possibly take a look at this one?
Thanks
 bec1b6f9e64f5579af234cf1026bd158d140abe7 is the first bad commit
commit bec1b6f9e64f5579af234cf1026bd158d140abe7
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Mar 12 17:07:50 2021 +0100

    source e1d0846e060d2b3faedfe1a5877303037d8cf4d6

https://git.libreoffice.org/core/+/e1d0846e060d2b3faedfe1a5877303037d8cf4d6
  drop PNGReader and use only PngImageReader
Comment 3 Commit Notification 2021-04-20 09:05:22 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ff9362ea961e4783707871cc60b72e602952fe05

fake 1bpp 2-color pattern bitmap if loaded as RGB (tdf#141612)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2021-04-20 09:38:35 UTC
I confirm that I don't reproduce the pb with Luboš' patch, thank you Luboš!