fake 1bpp 2-color pattern bitmap if loaded as RGB (tdf#141612)

The new PNG loader no longer loads 1bpp bitmaps as 1bpp, which
breaks the reliance of this old code on detecting pattern bitmaps
by being 1bpp. Count instead the number of colors and pretend
the bitmap is a 2-color bitmap if that's the case. The commit
fixing tdf#119282 says that doesn't work, but I do not see any
problem, any 2-color 8x8 bitmap is essentially a pattern.

Change-Id: Iea1bb2e2a2c06404e2ebdbdd6a899b1ab1e1afae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114295
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>